--- a/.github/workflows/maven-cache.yml
+++ b/.github/workflows/maven-cache.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   docker:
     env:
-     appName: "springboot-image"
+     appName: "springboot-img"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
