--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -7,6 +7,4 @@ on:
 jobs:
   Reusable-caller-job:
     uses: ./.github/workflows/maven-cache.yml
-    secrets:
-      username: ${{ secrets.DOCKERHUB1_USERNAME }}
-      password: ${{ secrets.DOCKERHUB1_TOKEN }}
+    secrets: inherit
